Update Simplified Chinese translation

--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Simplified).json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Simplified).json
@@ -1,143 +1,143 @@
 {
   "ietf_tag": "zh-hans",
   "native_name": "简体中文",
-  "page_not_found": "找不到页面!",
-  "home": "家",
-  "mod_loader": "模组加载器",
+  "page_not_found": "页面未找到！",
+  "home": "主页",
+  "mod_loader": "Mod 加载器",
   "settings": "设置",
   "info": "信息",
   "request_timed_out": "请求超时！",
   "home_add_server": "添加新服务器",
-  "home_add_server_cta": "请使用上面的\"添加新服务器\"按钮添加服务器",
-  "server_card_protect": "禁止编辑",
+  "home_add_server_cta": "请使用上方的“添加新服务器”按钮添加服务器",
+  "server_card_protect": "无法编辑",
   "server_card_edit": "编辑服务器",
-  "server_card_name": "姓名:",
-  "server_card_address": "地址:",
+  "server_card_name": "名称：",
+  "server_card_address": "地址：",
   "server_card_connected": "已连接",
-  "server_card_disconnected": "已断开连接",
+  "server_card_disconnected": "未连接",
   "server_card_login": "登录服务器",
-  "server_card_logout": "注销服务器",
+  "server_card_logout": "登出服务器",
   "server_card_delete": "删除服务器",
-  "info_forge_desc": "单人塔科夫修改可用的最丰富的资源.",
-  "info_github_desc": "所有 SPT 相关存储库的 Github",
-  "info_discord_desc": "SPT Discord",
-  "info_wiki_desc": "Escape From Tarkov Wiki",
-  "info_changelog_desc": "Wiki Changelog",
-  "info_translations": "翻译有问题吗？请在 GitHub 上提交更正请求。",
-  "profile_logout": "注销个人资料",
+  "info_forge_desc": "单人塔科夫最佳的 Mod 资源库",
+  "info_github_desc": "所有 SPT 相关项目的 Github 仓库",
+  "info_discord_desc": "SPT 官方 Discord 服务器",
+  "info_wiki_desc": "逃离塔科夫 Wiki",
+  "info_changelog_desc": "Wiki 更新日志",
+  "info_translations": "翻译有问题？请在 GitHub 上提交 PR 进行修正。",
+  "profile_logout": "登出档案",
   "profile_start_game": "开始游戏",
-  "profiles_disconnect": "与服务器断开连接",
-  "profiles_create": "创建新的个人资料",
+  "profiles_disconnect": "断开服务器连接",
+  "profiles_create": "创建新档案",
   "profiles_login": "使用详细信息登录",
-  "profiles_empty_warning": "服务器尚无个人资料或未显示个人资料. 请创建新个人资料或使用详细信息登录.",
-  "profiles_connect_warning": "请先连接到服务器!",
-  "setting_close": "靠近托盘",
+  "profiles_empty_warning": "服务器上没有档案或未显示档案。请创建新档案或使用详细信息登录。",
+  "profiles_connect_warning": "请先连接到服务器！",
+  "setting_close": "关闭到托盘",
   "setting_minimize": "游戏开始时最小化",
-  "setting_always_top": "始终处于领先地位",
-  "game_helper_error_1": "SPT 安装在 Live 中",
+  "setting_always_top": "始终置顶",
+  "game_helper_error_1": "SPT 被安装在线上客户端中",
   "game_helper_error_2": "核心 dll 不匹配",
   "game_helper_error_3": "游戏验证失败",
   "game_helper_error_4": "修补失败",
-  "game_helper_error_5": "找不到 EscapeFromTarkov.exe",
-  "game_helper_error_6": "启动游戏失败",
-  "info_card_name": "姓名",
+  "game_helper_error_5": "未找到 EscapeFromTarkov.exe",
+  "game_helper_error_6": "启动游戏进程失败",
+  "info_card_name": "名称",
   "info_card_desc": "描述",
-  "profile_card_name": "姓名",
+  "profile_card_name": "名称",
   "profile_card_level": "等级",
-  "profile_card_edition": "版",
+  "profile_card_edition": "版本",
   "profile_card_id": "ID",
   "profile_card_password": "密码保护",
-  "profile_card_login": "登录此个人资料",
-  "profile_card_logout": "退出此个人资料",
-  "profile_card_invalid": "个人资料被标记为无效",
-  "profile_card_edit": "编辑此个人资料",
-  "profile_card_delete": "删除此个人资料",
-  "setting_option_background": "使用背景图像",
+  "profile_card_login": "登录此档案",
+  "profile_card_logout": "登出此档案",
+  "profile_card_invalid": "此档案标记为无效",
+  "profile_card_edit": "编辑此档案",
+  "profile_card_delete": "删除此档案",
+  "setting_option_background": "使用背景图片",
   "setting_option_language": "语言",
-  "setting_load_live": "加载实时设置",
+  "setting_load_live": "加载线上设置",
   "setting_clear_game": "清除游戏设置",
   "setting_clean_temp": "清理临时文件",
   "setting_copy_logs": "复制日志",
   "setting_clear_api": "清除 API 密钥",
-  "setting_load_live_error_1": "无法从实时加载设置",
-  "setting_load_live_error_2": "加载实时设置失败",
-  "setting_load_live_success": "加载实时设置",
-  "setting_clear_game_error_1": "由于未经授权的访问，清除游戏设置失败",
+  "setting_load_live_error_1": "无法从线上加载设置",
+  "setting_load_live_error_2": "加载线上设置失败",
+  "setting_load_live_success": "已加载线上设置",
+  "setting_clear_game_error_1": "由于未授权的访问，清除游戏设置失败",
   "setting_clear_game_error_2": "清除游戏设置失败",
-  "setting_clear_game_success": "清除游戏设置",
-  "setting_clean_temp_error_1": "由于未经授权的访问，无法清理临时文件",
+  "setting_clear_game_success": "已清除游戏设置",
+  "setting_clean_temp_error_1": "由于未授权的访问，无法清理临时文件",
   "setting_clean_temp_error_2": "无法清理临时文件",
-  "setting_clean_temp_success": "清理临时文件",
-  "setting_copy_logs_error_1": "无法设置带有日志的剪贴板",
+  "setting_clean_temp_success": "已清理临时文件",
+  "setting_copy_logs_error_1": "无法将日志复制到剪贴板",
   "setting_copy_logs_success": "已将日志复制到剪贴板",
-  "setting_clear_api_error_1": "无法退出 Forge API",
-  "setting_clear_api_success": "成功退出 Forge API",
-  "profile_add_edition": "版",
-  "profile_add_name": "姓名",
+  "setting_clear_api_error_1": "无法登出 Forge API",
+  "setting_clear_api_success": "成功登出 Forge API",
+  "profile_add_edition": "版本",
+  "profile_add_name": "名称",
   "profile_add_confirm": "添加",
   "profile_add_cancel": "取消",
-  "profile_add_task_1": "将配置文件详细信息添加到服务器",
-  "profile_add_task_default": "连接服务器时出错!",
-  "profile_add_task_success": "添加个人资料",
-  "profile_add_task_fail": "无法将个人资料详细信息添加到服务器",
+  "profile_add_task_1": "正在向服务器添加档案信息",
+  "profile_add_task_default": "连接服务器时出错！",
+  "profile_add_task_success": "档案已添加",
+  "profile_add_task_fail": "向服务器添加档案信息失败",
   "profile_edit_username": "用户名",
   "profile_edit_old_pass": "旧密码",
   "profile_edit_new_pass": "新密码",
   "profile_edit_confirm": "确认",
   "profile_edit_cancel": "取消",
-  "profile_edit_task_1": "使用服务器更改密码",
-  "profile_edit_task_default": "更改密码错误!",
-  "profile_edit_task_success": "密码更改为",
-  "profile_edit_task_fail": "无法通过服务器更改密码",
+  "profile_edit_task_1": "正在向服务器更改密码",
+  "profile_edit_task_default": "更改密码时出错！",
+  "profile_edit_task_success": "密码已更改为",
+  "profile_edit_task_fail": "向服务器更改密码失败",
   "profile_login_username": "用户名",
   "profile_login_confirm": "登录",
   "profile_login_cancel": "取消",
-  "profile_login_task_1": "从服务器获取个人资料详细信息",
-  "profile_login_task_default": "连接服务器时出错!",
-  "profile_login_task_success": "登录到",
-  "profile_login_task_fail": "无法从服务器获取个人资料详细信息",
-  "profile_remove_text": "您确实要删除此个人资料吗？此过程无法撤消.",
+  "profile_login_task_1": "正在从服务器获取档案信息",
+  "profile_login_task_default": "连接服务器时出错！",
+  "profile_login_task_success": "已登录到",
+  "profile_login_task_fail": "从服务器获取档案信息失败",
+  "profile_remove_text": "您确定要删除此档案吗？此操作无法撤消。",
   "profile_remove_confirm": "删除",
   "profile_remove_cancel": "取消",
-  "profile_remove_task_1": "从服务器删除个人资料详细信息",
-  "profile_remove_task_default": "无法从服务器删除个人资料详情",
-  "profile_remove_task_success": "已删除个人资料",
-  "profile_remove_task_fail": "从服务器删除配置文件时出错!",
-  "server_add_name": "姓名",
+  "profile_remove_task_1": "正在从服务器删除档案信息",
+  "profile_remove_task_default": "从服务器删除档案信息失败",
+  "profile_remove_task_success": "已删除档案",
+  "profile_remove_task_fail": "从服务器删除档案时出错！",
+  "server_add_name": "名称",
   "server_add_address": "地址",
-  "server_add_required": "需要 IP!",
-  "server_add_confirm": "Add",
+  "server_add_required": "IP 地址是必填项！",
+  "server_add_confirm": "添加",
   "server_add_cancel": "取消",
-  "server_add_success": "添加服务器!",
-  "server_edit_name": "姓名",
+  "server_add_success": "已添加服务器！",
+  "server_edit_name": "名称",
   "server_edit_address": "地址",
-  "server_edit_required": "需要 IP!",
+  "server_edit_required": "IP 地址是必填项！",
   "server_edit_confirm": "确认",
   "server_edit_cancel": "取消",
-  "server_edit_success": "编辑服务器!",
-  "server_login_default": "连接服务器时出错!",
+  "server_edit_success": "已编辑服务器！",
+  "server_login_default": "连接服务器时出错！",
   "server_login_cancel": "取消",
-  "server_login_success": "登录到",
+  "server_login_success": "已登录到",
   "server_login_fail": "登录服务器失败",
-  "server_login_task_1": "检查与服务器的连接",
-  "server_login_task_2": "从服务器获取配置文件",
-  "server_login_task_3": "从服务器获取配置文件创建数据",
-  "server_login_task_4": "从服务器获取活动模组列表",
-  "server_login_task_fail_1": "从服务器获取配置文件时出错!",
-  "server_login_task_fail_2": "获取个人资料创建数据时出错!",
-  "server_login_task_fail_3": "从服务器获取模组列表时出错!",
-  "server_login_task_success": "已连接到服务器!",
-  "server_remove_text": "您确实要删除此服务器吗？此过程无法撤消.",
+  "server_login_task_1": "正在检查与服务器的连接",
+  "server_login_task_2": "正在从服务器获取档案文件",
+  "server_login_task_3": "正在从服务器获取档案文件创建数据",
+  "server_login_task_4": "正在从服务器获取已启用模组列表",
+  "server_login_task_fail_1": "从服务器获取档案文件时出错！",
+  "server_login_task_fail_2": "从服务器获取档案文件创建数据时出错！",
+  "server_login_task_fail_3": "从服务器获取模组列表时出错！",
+  "server_login_task_success": "已连接到服务器！",
+  "server_remove_text": "您确定要删除此服务器吗？此操作无法撤消。",
   "server_remove_confirm": "删除",
   "server_remove_cancel": "取消",
-  "server_remove_submit": "服务器已移除!",
-  "forge_page_coming": "Forge 即将推出!",
-  "mod_page_coming": "Mod Loader 即将推出!",
-  "profile_page_task_1": "检查安装",
+  "server_remove_submit": "服务器已删除！",
+  "forge_page_coming": "Forge 功能即将推出！",
+  "mod_page_coming": "Mod 加载器即将推出！",
+  "profile_page_task_1": "正在检查安装",
   "profile_page_task_1_fail": "游戏检查失败",
-  "profile_page_task_2": "修补游戏",
-  "profile_page_task_2_fail": "游戏补丁失败",
-  "profile_page_task_3": "启动游戏",
+  "profile_page_task_2": "正在修补游戏",
+  "profile_page_task_2_fail": "修补游戏失败",
+  "profile_page_task_3": "正在启动游戏",
   "profile_page_task_3_fail": "游戏启动失败",
   "profile_page_game_closed": "游戏已关闭"
 }
