--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
@@ -2,142 +2,142 @@
   "ietf_tag": "zh-hant",
   "native_name": "繁體中文",
   "page_not_found": "頁面未找到！",
-  "home": "家",
-  "mod_loader": "模組載入器",
+  "home": "主頁",
+  "mod_loader": "Mod 載入器",
   "settings": "設定",
   "info": "資訊",
   "request_timed_out": "請求超時！",
-  "home_add_server": "新增伺服器",
-  "home_add_server_cta": "請使用上面的“新增伺服器”按鈕新增伺服器。",
-  "server_card_protect": "禁止編輯",
+  "home_add_server": "新增新伺服器",
+  "home_add_server_cta": "請使用上方的“新增新伺服器”按鈕新增伺服器",
+  "server_card_protect": "無法編輯",
   "server_card_edit": "編輯伺服器",
-  "server_card_name": "姓名:",
-  "server_card_address": "地址:",
-  "server_card_connected": "已連接",
-  "server_card_disconnected": "斷開連接",
+  "server_card_name": "名稱：",
+  "server_card_address": "地址：",
+  "server_card_connected": "已連線",
+  "server_card_disconnected": "未連線",
   "server_card_login": "登入伺服器",
-  "server_card_logout": "退出伺服器",
+  "server_card_logout": "登出伺服器",
   "server_card_delete": "刪除伺服器",
-  "info_forge_desc": "單人塔科夫修改可用的最豐富的資源。",
-  "info_github_desc": "所有 SPT 相關儲存庫的 Github",
-  "info_discord_desc": "SPT Discord",
-  "info_wiki_desc": "Escape From Tarkov Wiki",
-  "info_changelog_desc": "Wiki Changelog",
-  "info_translations": "翻譯有問題嗎？請在 GitHub 上提交更正請求。",
-  "profile_logout": "退出個人資料",
+  "info_forge_desc": "單人塔科夫最佳的 Mod 資源庫",
+  "info_github_desc": "所有 SPT 相關專案的 Github 倉庫",
+  "info_discord_desc": "SPT 官方 Discord 伺服器",
+  "info_wiki_desc": "逃離塔科夫 Wiki",
+  "info_changelog_desc": "Wiki 更新日誌",
+  "info_translations": "翻譯有問題？請在 GitHub 上提交 PR 進行修正。",
+  "profile_logout": "登出檔案",
   "profile_start_game": "開始遊戲",
-  "profiles_disconnect": "斷開與伺服器的連接",
-  "profiles_create": "建立新的個人資料",
+  "profiles_disconnect": "斷開伺服器連線",
+  "profiles_create": "建立新檔案",
   "profiles_login": "使用詳細資訊登入",
-  "profiles_empty_warning": "伺服器尚無個人資料或未顯示個人資料。請建立新的個人資料或使用詳細資訊登入。",
-  "profiles_connect_warning": "請先連接到伺服器！",
-  "setting_close": "靠近托盤",
+  "profiles_empty_warning": "伺服器上沒有檔案或未顯示檔案。請建立新檔案或使用詳細資訊登入。",
+  "profiles_connect_warning": "請先連線到伺服器！",
+  "setting_close": "關閉到托盤",
   "setting_minimize": "遊戲開始時最小化",
-  "setting_always_top": "始終處於領先地位",
-  "game_helper_error_1": "SPT 安裝在 Live 中",
+  "setting_always_top": "始終置頂",
+  "game_helper_error_1": "SPT 被安裝線上上客戶端中",
   "game_helper_error_2": "核心 dll 不匹配",
   "game_helper_error_3": "遊戲驗證失敗",
   "game_helper_error_4": "修補失敗",
-  "game_helper_error_5": "找不到 EscapeFromTarkov.exe",
-  "game_helper_error_6": "啟動遊戲失敗",
-  "info_card_name": "姓名",
+  "game_helper_error_5": "未找到 EscapeFromTarkov.exe",
+  "game_helper_error_6": "啟動遊戲程序失敗",
+  "info_card_name": "名稱",
   "info_card_desc": "描述",
-  "profile_card_name": "姓名",
+  "profile_card_name": "名稱",
   "profile_card_level": "等級",
-  "profile_card_edition": "版",
+  "profile_card_edition": "版本",
   "profile_card_id": "ID",
   "profile_card_password": "密碼保護",
-  "profile_card_login": "登入此個人資料",
-  "profile_card_logout": "退出此個人資料",
-  "profile_card_invalid": "個人資料被標記為無效",
-  "profile_card_edit": "編輯此個人資料",
-  "profile_card_delete": "刪除此個人資料",
-  "setting_option_background": "使用背景影像",
+  "profile_card_login": "登入此檔案",
+  "profile_card_logout": "登出此檔案",
+  "profile_card_invalid": "此檔案標記為無效",
+  "profile_card_edit": "編輯此檔案",
+  "profile_card_delete": "刪除此檔案",
+  "setting_option_background": "使用背景圖片",
   "setting_option_language": "語言",
-  "setting_load_live": "載入即時設定",
+  "setting_load_live": "載入線上設定",
   "setting_clear_game": "清除遊戲設定",
-  "setting_clean_temp": "清理臨時文件",
+  "setting_clean_temp": "清理臨時檔案",
   "setting_copy_logs": "複製日誌",
   "setting_clear_api": "清除 API 金鑰",
-  "setting_load_live_error_1": "無法從即時加載設置",
-  "setting_load_live_error_2": "載入即時設定失敗",
-  "setting_load_live_success": "載入即時設定",
-  "setting_clear_game_error_1": "由於未經授權的訪問，清除遊戲設定失敗",
+  "setting_load_live_error_1": "無法從線上載入設定",
+  "setting_load_live_error_2": "載入線上設定失敗",
+  "setting_load_live_success": "已載入線上設定",
+  "setting_clear_game_error_1": "由於未授權的訪問，清除遊戲設定失敗",
   "setting_clear_game_error_2": "清除遊戲設定失敗",
-  "setting_clear_game_success": "清除遊戲設定",
-  "setting_clean_temp_error_1": "由於未經授權的訪問，無法清理臨時文件",
-  "setting_clean_temp_error_2": "無法清理臨時文件",
-  "setting_clean_temp_success": "清理臨時文件",
-  "setting_copy_logs_error_1": "無法設定帶有日誌的剪貼簿",
+  "setting_clear_game_success": "已清除遊戲設定",
+  "setting_clean_temp_error_1": "由於未授權的訪問，無法清理臨時檔案",
+  "setting_clean_temp_error_2": "無法清理臨時檔案",
+  "setting_clean_temp_success": "已清理臨時檔案",
+  "setting_copy_logs_error_1": "無法將日誌複製到剪貼簿",
   "setting_copy_logs_success": "已將日誌複製到剪貼簿",
-  "setting_clear_api_error_1": "無法退出 Forge API",
-  "setting_clear_api_success": "成功退出 Forge API",
-  "profile_add_edition": "版",
-  "profile_add_name": "姓名",
-  "profile_add_confirm": "添加",
+  "setting_clear_api_error_1": "無法登出 Forge API",
+  "setting_clear_api_success": "成功登出 Forge API",
+  "profile_add_edition": "版本",
+  "profile_add_name": "名稱",
+  "profile_add_confirm": "新增",
   "profile_add_cancel": "取消",
-  "profile_add_task_1": "將設定檔詳細資訊新增至伺服器",
-  "profile_add_task_default": "連接伺服器錯誤！",
-  "profile_add_task_success": "新增個人資料",
-  "profile_add_task_fail": "無法將個人資料詳細資料新增至伺服器",
+  "profile_add_task_1": "正在向伺服器新增檔案資訊",
+  "profile_add_task_default": "連線伺服器時出錯！",
+  "profile_add_task_success": "檔案已新增",
+  "profile_add_task_fail": "向伺服器新增檔案資訊失敗",
   "profile_edit_username": "使用者名稱",
   "profile_edit_old_pass": "舊密碼",
   "profile_edit_new_pass": "新密碼",
   "profile_edit_confirm": "確認",
   "profile_edit_cancel": "取消",
-  "profile_edit_task_1": "使用伺服器更改密碼",
-  "profile_edit_task_default": "修改密碼錯誤！",
-  "profile_edit_task_success": "密碼更改為",
-  "profile_edit_task_fail": "無法透過伺服器更改密碼",
+  "profile_edit_task_1": "正在向伺服器更改密碼",
+  "profile_edit_task_default": "更改密碼時出錯！",
+  "profile_edit_task_success": "密碼已更改為",
+  "profile_edit_task_fail": "向伺服器更改密碼失敗",
   "profile_login_username": "使用者名稱",
   "profile_login_confirm": "登入",
   "profile_login_cancel": "取消",
-  "profile_login_task_1": "從伺服器取得個人資料詳細信息",
-  "profile_login_task_default": "連接伺服器錯誤！",
-  "profile_login_task_success": "登入",
-  "profile_login_task_fail": "無法從伺服器取得個人資料詳細信息",
-  "profile_remove_text": "您確實要刪除此個人資料嗎？此過程無法撤銷。",
+  "profile_login_task_1": "正在從伺服器獲取檔案資訊",
+  "profile_login_task_default": "連線伺服器時出錯！",
+  "profile_login_task_success": "已登入到",
+  "profile_login_task_fail": "從伺服器獲取檔案資訊失敗",
+  "profile_remove_text": "您確定要刪除此檔案嗎？此操作無法撤消。",
   "profile_remove_confirm": "刪除",
   "profile_remove_cancel": "取消",
-  "profile_remove_task_1": "從伺服器刪除個人資料詳細信息",
-  "profile_remove_task_default": "無法從伺服器刪除個人資料詳情",
-  "profile_remove_task_success": "已刪除個人資料",
-  "profile_remove_task_fail": "從伺服器刪除設定檔時出錯！",
-  "server_add_name": "姓名",
+  "profile_remove_task_1": "正在從伺服器刪除檔案資訊",
+  "profile_remove_task_default": "從伺服器刪除檔案資訊失敗",
+  "profile_remove_task_success": "已刪除檔案",
+  "profile_remove_task_fail": "從伺服器刪除檔案時出錯！",
+  "server_add_name": "名稱",
   "server_add_address": "地址",
-  "server_add_required": "需要 IP！",
-  "server_add_confirm": "添加",
+  "server_add_required": "IP 地址是必填項！",
+  "server_add_confirm": "新增",
   "server_add_cancel": "取消",
   "server_add_success": "已新增伺服器！",
-  "server_edit_name": "姓名",
+  "server_edit_name": "名稱",
   "server_edit_address": "地址",
-  "server_edit_required": "需要 IP！",
+  "server_edit_required": "IP 地址是必填項！",
   "server_edit_confirm": "確認",
   "server_edit_cancel": "取消",
   "server_edit_success": "已編輯伺服器！",
-  "server_login_default": "連接伺服器錯誤！",
+  "server_login_default": "連線伺服器時出錯！",
   "server_login_cancel": "取消",
-  "server_login_success": "登入",
+  "server_login_success": "已登入到",
   "server_login_fail": "登入伺服器失敗",
-  "server_login_task_1": "檢查與伺服器的連接",
-  "server_login_task_2": "從伺服器取得設定檔",
-  "server_login_task_3": "從伺服器取得設定檔建立數據",
-  "server_login_task_4": "從伺服器取得活動模組列表",
-  "server_login_task_fail_1": "從伺服器取得設定檔時出錯！",
-  "server_login_task_fail_2": "取得個人資料建立資料時出錯！",
-  "server_login_task_fail_3": "從伺服器取得模組列表時出錯！",
-  "server_login_task_success": "已連接到伺服器！",
-  "server_remove_text": "您確實要刪除此伺服器嗎？此過程無法撤銷。",
+  "server_login_task_1": "正在檢查與伺服器的連線",
+  "server_login_task_2": "正在從伺服器獲取檔案檔案",
+  "server_login_task_3": "正在從伺服器獲取檔案檔案建立資料",
+  "server_login_task_4": "正在從伺服器獲取已啟用模組列表",
+  "server_login_task_fail_1": "從伺服器獲取檔案檔案時出錯！",
+  "server_login_task_fail_2": "從伺服器獲取檔案檔案建立資料時出錯！",
+  "server_login_task_fail_3": "從伺服器獲取模組列表時出錯！",
+  "server_login_task_success": "已連線到伺服器！",
+  "server_remove_text": "您確定要刪除此伺服器嗎？此操作無法撤消。",
   "server_remove_confirm": "刪除",
   "server_remove_cancel": "取消",
-  "server_remove_submit": "伺服器已移除！",
-  "forge_page_coming": "Forge 即將推出！",
-  "mod_page_coming": "Mod Loader 即將推出！",
-  "profile_page_task_1": "檢查安裝",
+  "server_remove_submit": "伺服器已刪除！",
+  "forge_page_coming": "Forge 功能即將推出！",
+  "mod_page_coming": "Mod 載入器即將推出！",
+  "profile_page_task_1": "正在檢查安裝",
   "profile_page_task_1_fail": "遊戲檢查失敗",
-  "profile_page_task_2": "修補遊戲",
-  "profile_page_task_2_fail": "遊戲補丁失敗",
-  "profile_page_task_3": "啟動遊戲",
+  "profile_page_task_2": "正在修補遊戲",
+  "profile_page_task_2_fail": "修補遊戲失敗",
+  "profile_page_task_3": "正在啟動遊戲",
   "profile_page_task_3_fail": "遊戲啟動失敗",
   "profile_page_game_closed": "遊戲已關閉"
 }
