--- a/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
+++ b/project/SPTarkov.Core/SPT_Data/Launcher/Locales/Chinese (Traditional).json
@@ -24,17 +24,17 @@
   "info_wiki_desc": "逃離塔科夫 Wiki",
   "info_changelog_desc": "Wiki 更新日誌",
   "info_translations": "翻譯有問題？請在 GitHub 上提交 PR 進行修正。",
-  "profile_logout": "登出檔案",
+  "profile_logout": "登出個人檔案",
   "profile_start_game": "開始遊戲",
   "profiles_disconnect": "斷開伺服器連線",
-  "profiles_create": "建立新檔案",
+  "profiles_create": "建立新個人檔案",
   "profiles_login": "使用詳細資訊登入",
-  "profiles_empty_warning": "伺服器上沒有檔案或未顯示檔案。請建立新檔案或使用詳細資訊登入。",
+  "profiles_empty_warning": "伺服器上沒有個人檔案或未顯示個人檔案。請建立新個人檔案或使用詳細資訊登入。",
   "profiles_connect_warning": "請先連線到伺服器！",
   "setting_close": "關閉到托盤",
   "setting_minimize": "遊戲開始時最小化",
   "setting_always_top": "始終置頂",
-  "game_helper_error_1": "SPT 被安裝線上上客戶端中",
+  "game_helper_error_1": "SPT 被安裝在線上客戶端中",
   "game_helper_error_2": "核心 dll 不匹配",
   "game_helper_error_3": "遊戲驗證失敗",
   "game_helper_error_4": "修補失敗",
@@ -47,11 +47,11 @@
   "profile_card_edition": "版本",
   "profile_card_id": "ID",
   "profile_card_password": "密碼保護",
-  "profile_card_login": "登入此檔案",
-  "profile_card_logout": "登出此檔案",
-  "profile_card_invalid": "此檔案標記為無效",
-  "profile_card_edit": "編輯此檔案",
-  "profile_card_delete": "刪除此檔案",
+  "profile_card_login": "登入此個人檔案",
+  "profile_card_logout": "登出此個人檔案",
+  "profile_card_invalid": "此個人檔案標記為無效",
+  "profile_card_edit": "編輯此個人檔案",
+  "profile_card_delete": "刪除此個人檔案",
   "setting_option_background": "使用背景圖片",
   "setting_option_language": "語言",
   "setting_load_live": "載入線上設定",
@@ -76,10 +76,10 @@
   "profile_add_name": "名稱",
   "profile_add_confirm": "新增",
   "profile_add_cancel": "取消",
-  "profile_add_task_1": "正在向伺服器新增檔案資訊",
+  "profile_add_task_1": "正在向伺服器添加個人檔案資訊",
   "profile_add_task_default": "連線伺服器時出錯！",
-  "profile_add_task_success": "檔案已新增",
-  "profile_add_task_fail": "向伺服器新增檔案資訊失敗",
+  "profile_add_task_success": "個人檔案已新增",
+  "profile_add_task_fail": "向伺服器添加個人檔案資訊失敗",
   "profile_edit_username": "使用者名稱",
   "profile_edit_old_pass": "舊密碼",
   "profile_edit_new_pass": "新密碼",
@@ -92,17 +92,17 @@
   "profile_login_username": "使用者名稱",
   "profile_login_confirm": "登入",
   "profile_login_cancel": "取消",
-  "profile_login_task_1": "正在從伺服器獲取檔案資訊",
+  "profile_login_task_1": "正在從伺服器獲取個人檔案資訊",
   "profile_login_task_default": "連線伺服器時出錯！",
   "profile_login_task_success": "已登入到",
-  "profile_login_task_fail": "從伺服器獲取檔案資訊失敗",
-  "profile_remove_text": "您確定要刪除此檔案嗎？此操作無法撤消。",
+  "profile_login_task_fail": "從伺服器獲取個人檔案資訊失敗",
+  "profile_remove_text": "您確定要刪除此個人檔案嗎？此操作無法撤消。",
   "profile_remove_confirm": "刪除",
   "profile_remove_cancel": "取消",
-  "profile_remove_task_1": "正在從伺服器刪除檔案資訊",
-  "profile_remove_task_default": "從伺服器刪除檔案資訊失敗",
-  "profile_remove_task_success": "已刪除檔案",
-  "profile_remove_task_fail": "從伺服器刪除檔案時出錯！",
+  "profile_remove_task_1": "正在從伺服器刪除個人檔案資訊",
+  "profile_remove_task_default": "從伺服器刪除個人檔案資訊失敗",
+  "profile_remove_task_success": "已刪除個人檔案",
+  "profile_remove_task_fail": "從伺服器刪除個人檔案時出錯！",
   "server_add_name": "名稱",
   "server_add_address": "地址",
   "server_add_required": "IP 地址是必填項！",
@@ -120,11 +120,11 @@
   "server_login_success": "已登入到",
   "server_login_fail": "登入伺服器失敗",
   "server_login_task_1": "正在檢查與伺服器的連線",
-  "server_login_task_2": "正在從伺服器獲取檔案檔案",
-  "server_login_task_3": "正在從伺服器獲取檔案檔案建立資料",
+  "server_login_task_2": "正在從伺服器獲取個人檔案",
+  "server_login_task_3": "正在從伺服器獲取個人檔案建立資料",
   "server_login_task_4": "正在從伺服器獲取已啟用模組列表",
-  "server_login_task_fail_1": "從伺服器獲取檔案檔案時出錯！",
-  "server_login_task_fail_2": "從伺服器獲取檔案檔案建立資料時出錯！",
+  "server_login_task_fail_1": "從伺服器獲取個人檔案時出錯！",
+  "server_login_task_fail_2": "從伺服器獲取個人檔案建立資料時出錯！",
   "server_login_task_fail_3": "從伺服器獲取模組列表時出錯！",
   "server_login_task_success": "已連線到伺服器！",
   "server_remove_text": "您確定要刪除此伺服器嗎？此操作無法撤消。",
